--- a/.insomnia/Request/req_54b861d0b4924c65a69afa8f2184554f.yml
+++ b/.insomnia/Request/req_54b861d0b4924c65a69afa8f2184554f.yml
@@ -1,10 +1,10 @@
-_id: req_def4e6d576094f8e93a6e2d7bac03bfc
+_id: req_54b861d0b4924c65a69afa8f2184554f
 type: Request
-parentId: fld_7758e91028f0446ea32637888424d701
-modified: 1674847050657
-created: 1666877776261
-url: "{{ _.baseUrl }}/v1/business/customer/740325/jobs/2050"
-name: Get_Job_business
+parentId: fld_bbdea0f4cb45484c866ec2be0a16c1dc
+modified: 1675105299202
+created: 1675104346971
+url: "{{ _.baseUrl }}/v1/quiz/740325"
+name: View_Campain
 description: ""
 method: GET
 body: {}
@@ -13,7 +13,7 @@ headers: []
 authentication:
   type: bearer
   token: "{{ _.token_login }}"
-metaSortKey: -1666877776261
+metaSortKey: -1675104346971
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
