--- a/.insomnia/Request/req_b2ae5f1fcda64f0581b501d92951bf08.yml
+++ b/.insomnia/Request/req_b2ae5f1fcda64f0581b501d92951bf08.yml
@@ -1,10 +1,10 @@
-_id: req_def4e6d576094f8e93a6e2d7bac03bfc
+_id: req_b2ae5f1fcda64f0581b501d92951bf08
 type: Request
-parentId: fld_7758e91028f0446ea32637888424d701
-modified: 1674847050657
-created: 1666877776261
-url: "{{ _.baseUrl }}/v1/business/customer/740325/jobs/2050"
-name: Get_Job_business
+parentId: fld_e69262cdf3544e5894b7c1e6651585db
+modified: 1675426635200
+created: 1675426617232
+url: "{{ _.prodUrl }}/v1/exams"
+name: List_Exams
 description: ""
 method: GET
 body: {}
@@ -13,7 +13,7 @@ headers: []
 authentication:
   type: bearer
   token: "{{ _.token_login }}"
-metaSortKey: -1666877776261
+metaSortKey: -1672951449615
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
