--- a/.insomnia/Request/req_c92d3cf76ba84c35870c76925f207148.yml
+++ b/.insomnia/Request/req_c92d3cf76ba84c35870c76925f207148.yml
@@ -1,7 +1,7 @@
 _id: req_c92d3cf76ba84c35870c76925f207148
 type: Request
 parentId: wrk_ec654d17af714e9790cf250cc253ad01
-modified: 1672167452236
+modified: 1699033690288
 created: 1666464627367
 url: "{{ _.baseUrl }}/v1/auth"
 name: Create_Token_Login_adm
@@ -12,7 +12,7 @@ body:
   text: |-
     {
     	"email":"wellingtonvx@gmail.com",
-    	"password": "12345678"
+    	"password": "fotop123"
     }
 parameters: []
 headers:
